# llmcli_v2

./: Cargo.toml  README.md
src/: input.rs  main.rs  media.rs  model_cap.rs  ollama.rs  session.rs
