[package]
name = "ollama-tui2"
version = "2.0.12"
edition = "2024"

[[bin]]
name = "llmcli"
path = "src/main.rs"

[dependencies]
anyhow       = "1"
base64       = "0.22"
ctrlc        = "3"
futures-util = "0.3"
libc         = "0.2"
reqwest      = { version = "0.13", features = ["json", "stream"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
